--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,28 +1,25 @@
-name: Generate Snake Animation
+name: generate github-contribution-grid-snake
 
 on:
-  schedule: # Executa automaticamente todo dia à meia-noite
+  schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch: # Permite rodar manualmente
-  push:
-    branches:
-      - main # ou master, depende do nome do seu branch principal
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Generate Snake
-        uses: Platane/snk@v3
+      - uses: actions/checkout@v3
+      - uses: Platane/snk@v3
         with:
+          # Sua conta de usuário do GitHub
           github_user_name: DevMatheusSousa
-          outputs: dist/github-contribution-grid-snake.svg
-
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+          # Arquivos de saída
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          
+      - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
